libraries/basset/nav.less
/*
Basset Nav Styling Mixins
*/

// Basset List Nav - Simplest styling, great for mobile menus
@nav_background_color: #E9E9E9;
@nav_color: #333;
@nav_highlight_background_color: #40D278;
@nav_highlight_color: #ffffff;
@nav_seperator_color: #C7C7C7;

.basset-list-nav() {
	& {
		.clearfix();
		background:@nav_background_color;
		padding:20px 0px;

		ul {
			margin:0px;
			padding:0px;
			list-style:none;

			li {
				display:block;
				border-bottom:1px solid @nav_seperator_color;

				&:last-child {
					border-bottom:none;
				}

				a {
					display:block;
					padding:20px;
					text-decoration:none;
					color: @nav_color;
					font-family:"Open Sans", Helvetica, sans-serif;
					font-size:1.2em;
				}
				&.current-menu-item {
					& > a {
						background:@nav_highlight_background_color;
						color:@nav_highlight_color;
					}
				}


				ul {

					li {
						border-bottom:none;
						padding-left:20px;

						a {
							padding:10px 20px;
							font-size:1em;
						}
					}
				}
			}
		}
	}
}

.basset-horizontal-nav() {
	& {
		.clearfix();
		background:@nav_background_color;

		ul {
			list-style:none;
			margin:0px;
			padding:0px;
			text-align:center;

			li {
				display:inline-block;
				margin:0px;
				padding:0px;
				position:relative;

				&.current-menu-item {
					& > a {
						background:@nav_highlight_background_color;
						color:@nav_highlight_color;

						&:hover {
							background:darken(@nav_highlight_background_color, 10%);
						}
					}
				}

				// Nav with subnav
				&.menu-item-has-children {
					& > a:after {
						font-family: "dashicons";
						content: "\f347";
						display: inline-block;
						padding-left:6px;
						vertical-align: middle;
						height: 18px;
						margin-top: -8px;
					}

					&:hover {
						ul {
							display:block;
							position:absolute;
							background:@nav_background_color;

							li {
								display:block;

								a {
									text-align:left;
								}
							}
						}
					}
				}

				a {
					display:block;
					padding:16px;
					text-decoration:none;
					color: @nav_color;
					font-family:"Open Sans", Helvetica, sans-serif;
					font-size:1em;

					&:hover {
						background-color:rgba(0,0,0,.1);
					}
				}

				ul {
					display:none;
				}
			}
		}
	}
}

